API: Escape SQL Queries. Systeminfo: Put system info api in module file. Switch: Added Icons to the On/Off Button. Config: Fixed Layout Problems. Webcam: Removed useless Size field.

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,19 @@ body {
 	min-height:320px;
 }
 
+.col-module-config .form-group {
+	margin-bottom: 5px;
+}
+
+.col-module-config .form-group .col-sm-4 {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.col-module-config .form-group .col-sm-8 {
+	padding-right: 0;
+}
+
 .ui-sortable-handle {
 	min-height: 350px;
 	position: relative;
@@ -50,6 +63,32 @@ body {
 	Config
 */
 
+
+
+/*
+Systeminfo
+*/
+.systemInfo .col-md-4 {
+	font-weight: bold;
+	text-align: right;
+}
+
+.systemInfo .col-md-8 {
+	text-align: left;
+}
+
+.systemInfo .col-md-4,
+.systemInfo .col-md-8{
+	margin-bottom: 5px;
+}
+
+.systemInfo .progress {
+	margin-bottom: 0;
+}
+
+/*
+Systeminfo
+*/
 
 
 /*
